Creation du controlleur pour les stats et les schedules

--- a/schedule.html
+++ b/schedule.html
@@ -22,9 +22,315 @@
         </tr>
     </thead>
     <tbody>
+        <tr>
+            <td>Vendredi le 09 septembre</td>
+            <td>19:30</td>
+            <td>Match HC</td>
+            <td>GOUVERNEURS TERREBONNE</td>
+            <td>CENTURIONS</td>
+            <td>STE-THERESE</td>
+        </tr>
+        <tr>
+            <td>Samedi le 10 septembre</td>
+            <td>16:00</td>
+            <td>Match HC</td>
+            <td>GOUVERNEURS TERREBONNE</td>
+            <td>COBRAS LA PLAINE</td>
+            <td>LA PLAINE 1</td>
+        </tr>
+        <tr>
+            <td>Lundi le 12 septembre</td>
+            <td>20:00</td>
+            <td>Pratique 1/2 Glace</td>
+            <td>GOUVERNEURS TERREBONNE</td>
+            <td>GOUVERNEURS TERREBONNE</td>
+            <td>TERREBONNE 1</td>
+        </tr>
+        <tr>
+            <td>Lundi le 19 septembre</td>
+            <td>20:00</td>
+            <td>Pratique 1/2 Glace</td>
+            <td>GOUVERNEURS TERREBONNE</td>
+            <td>GOUVERNEURS TERREBONNE</td>
+            <td>TERREBONNE 1</td>
+        </tr>
+        <tr>
+            <td>Dimanche le 25 septembre</td>
+            <td>18:30</td>
+            <td>Match Officiel</td>
+            <td>CYCLONES 1 JOLIETTE-CRABTREE</td>
+            <td>GOUVERNEURS TERREBONNE</td>
+            <td>TERREBONNE 1</td>
+        </tr>
+        <tr>
+            <td>Mercredi le 28 septembre</td>
+            <td>19:30</td>
+            <td>Pratique 1/2 Glace</td>
+            <td>GOUVERNEURS TERREBONNE</td>
+            <td>GOUVERNEURS TERREBONNE</td>
+            <td>TERREBONNE 1</td>
+        </tr>
+        <tr>
+            <td>Vendredi le 30 septembre</td>
+            <td>20:30</td>
+            <td>Match Officiel</td>
+            <td>GOUVERNEURS TERREBONNE</td>
+            <td>AIGLES SADP</td>
+            <td>SADP</td>
+        </tr>
+        <tr>
+            <td>Dimanche le 02 octobre</td>
+            <td>16:00</td>
+            <td>Match Officiel</td>
+            <td>COBRAS LA PLAINE</td>
+            <td>GOUVERNEURS TERREBONNE</td>
+            <td>TERREBONNE 1</td>
+        </tr>
+        <tr>
+            <td>Jeudi le 06 octobre</td>
+            <td>18:30</td>
+            <td>Pratique pleine glace</td>
+            <td>GOUVERNEURS TERREBONNE</td>
+            <td></td>
+            <td>TERREBONNE 1</td>
+        </tr>
+        <tr>
+            <td>Samedi le 08 octobre</td>
+            <td>18:00</td>
+            <td>Match Officiel</td>
+            <td>GOUVERNEURS TERREBONNE</td>
+            <td>SIEURS TERREBONNE</td>
+            <td>TERREBONNE 2</td>
+        </tr>
+        <tr>
+            <td>Dimanche le 09 octobre</td>
+            <td>16:00</td>
+            <td>Match Officiel</td>
+            <td>AMBASSADEURS 2 CLL</td>
+            <td>GOUVERNEURS TERREBONNE</td>
+            <td>TERREBONNE 1</td>
+        </tr>
+        <tr>
+            <td>Dimanche le 16 octobre</td>
+            <td>14:30</td>
+            <td>Match Officiel</td>
+            <td>CHEVALIERS LACHENAIE</td>
+            <td>GOUVERNEURS TERREBONNE</td>
+            <td>TERREBONNE 2</td>
+        </tr>
+        <tr>
+            <td>Lundi le 17 octobre</td>
+            <td>20:00</td>
+            <td>Pratique 1/2 Glace</td>
+            <td>GOUVERNEURS TERREBONNE</td>
+            <td>GOUVERNEURS TERREBONNE</td>
+            <td>TERREBONNE 1</td>
+        </tr>
+        <tr>
+            <td>Mercredi le 19 octobre</td>
+            <td>20:30</td>
+            <td>Pratique 1/2 Glace</td>
+            <td>GOUVERNEURS TERREBONNE</td>
+            <td>GOUVERNEURS TERREBONNE</td>
+            <td>TERREBONNE 1</td>
+        </tr>
+        <tr>
+            <td>Vendredi le 21 octobre</td>
+            <td>20:30</td>
+            <td>Match Officiel</td>
+            <td>ARCHERS ST-GABRIEL</td>
+            <td>GOUVERNEURS TERREBONNE</td>
+            <td>TERREBONNE 2</td>
+        </tr>
+        <tr>
+            <td>Dimanche le 23 octobre</td>
+            <td>15:30</td>
+            <td>Match Officiel</td>
+            <td>BLUE JACKETS REPENTIGNY</td>
+            <td>GOUVERNEURS TERREBONNE</td>
+            <td>TERREBONNE 2</td>
+        </tr>
+        <tr>
+            <td>Mercredi le 26 octobre</td>
+            <td>20:30</td>
+            <td>Pratique 1/2 Glace</td>
+            <td>GOUVERNEURS TERREBONNE</td>
+            <td>GOUVERNEURS TERREBONNE</td>
+            <td>TERREBONNE 1</td>
+        </tr>
+        <tr>
+            <td>Dimanche le 30 octobre</td>
+            <td>14:30</td>
+            <td>Match Officiel</td>
+            <td>GOUVERNEURS TERREBONNE</td>
+            <td>VOYAGEURS MASCOUCHE</td>
+            <td>MASCOUCHE 2</td>
+        </tr>
+        <tr>
+            <td>Lundi le 31 octobre</td>
+            <td>20:00</td>
+            <td>Pratique 1/2 Glace</td>
+            <td>GOUVERNEURS TERREBONNE</td>
+            <td>GOUVERNEURS TERREBONNE</td>
+            <td>TERREBONNE 1</td>
+        </tr>
+        <tr>
+            <td>Dimanche le 06 novembre</td>
+            <td>13:30</td>
+            <td>Match Officiel</td>
+            <td>GOUVERNEURS TERREBONNE</td>
+            <td>VOLTIGEURS MASCOUCHE</td>
+            <td>MASCOUCHE 2</td>
+        </tr>
+        <tr>
+            <td>Lundi le 07 novembre</td>
+            <td>20:00</td>
+            <td>Pratique 1/2 Glace</td>
+            <td>GOUVERNEURS TERREBONNE</td>
+            <td>GOUVERNEURS TERREBONNE</td>
+            <td>TERREBONNE 1</td>
+        </tr>
+        <tr>
+            <td>Lundi le 14 novembre</td>
+            <td>21:00</td>
+            <td>Pratique 1/2 Glace</td>
+            <td>GOUVERNEURS TERREBONNE</td>
+            <td>GOUVERNEURS TERREBONNE</td>
+            <td>TERREBONNE 1</td>
+        </tr>
+        <tr>
+            <td>Dimanche le 20 novembre</td>
+            <td>13:30</td>
+            <td>Match Officiel</td>
+            <td>GOUVERNEURS TERREBONNE</td>
+            <td>ARCHERS ST-GABRIEL</td>
+            <td>ARENA FAMILIPRIX ST-GABRIEL</td>
+        </tr>
+        <tr>
+            <td>Vendredi le 25 novembre</td>
+            <td>20:30</td>
+            <td>Pratique 1/2 Glace</td>
+            <td>GOUVERNEURS TERREBONNE</td>
+            <td>GOUVERNEURS TERREBONNE</td>
+            <td>TERREBONNE 2</td>
+        </tr>
+        <tr>
+            <td>Samedi le 26 novembre</td>
+            <td>19:00</td>
+            <td>Match Officiel</td>
+            <td>GAULOIS ST-LIN-LAURENTIDES</td>
+            <td>GOUVERNEURS TERREBONNE</td>
+            <td>TERREBONNE 2</td>
+        </tr>
+        <tr>
+            <td>Lundi le 28 novembre</td>
+            <td>20:00</td>
+            <td>Pratique 1/2 Glace</td>
+            <td>GOUVERNEURS TERREBONNE</td>
+            <td>GOUVERNEURS TERREBONNE</td>
+            <td>TERREBONNE 1</td>
+        </tr>
+        <tr>
+            <td>Dimanche le 04 décembre</td>
+            <td>15:00</td>
+            <td>Match Officiel</td>
+            <td>GOUVERNEURS TERREBONNE</td>
+            <td>BULLDOGS REPENTIGNY</td>
+            <td>REPENTIGNY 1</td>
+        </tr>
+        <tr>
+            <td>Samedi le 10 décembre</td>
+            <td>18:00</td>
+            <td>Match Officiel</td>
+            <td>CYCLONES 3 JOLIETTE-CRABTREE</td>
+            <td>GOUVERNEURS TERREBONNE</td>
+            <td>TERREBONNE 2</td>
+        </tr>
+        <tr>
+            <td>Dimanche le 11 décembre</td>
+            <td>17:00</td>
+            <td>Match Officiel</td>
+            <td>CYCLONES 2 JOLIETTE-CRABTREE</td>
+            <td>GOUVERNEURS TERREBONNE</td>
+            <td>TERREBONNE 1</td>
+        </tr>
+        <tr>
+            <td>Samedi le 17 décembre</td>
+            <td>17:00</td>
+            <td>Match Officiel</td>
+            <td>GOUVERNEURS TERREBONNE</td>
+            <td>AIGLES BERTHIER</td>
+            <td>BERTHIERVILLE</td>
+        </tr>
+        <tr>
+            <td>Dimanche le 18 décembre</td>
+            <td>18:30</td>
+            <td>Match Officiel</td>
+            <td>GOUVERNEURS TERREBONNE</td>
+            <td>AMBASSADEURS  1 CLL</td>
+            <td>ASSOMPTION</td>
+        </tr>
+        <tr>
+            <td>Dimanche le 08 janvier</td>
+            <td>16:30</td>
+            <td>Match Officiel</td>
+            <td>GOUVERNEURS TERREBONNE</td>
+            <td>AMBASSADEURS 2 CLL</td>
+            <td>LEGARDEUR</td>
+        </tr>
+        <tr>
+            <td>Samedi le 21 janvier</td>
+            <td>19:00</td>
+            <td>Match Officiel</td>
+            <td>FAUCONS SADP</td>
+            <td>GOUVERNEURS TERREBONNE</td>
+            <td>TERREBONNE 2</td>
+        </tr>
+        <tr>
+            <td>Vendredi le 27 janvier</td>
+            <td>20:45</td>
+            <td>Match Officiel</td>
+            <td>GOUVERNEURS TERREBONNE</td>
+            <td>BLUE JACKETS REPENTIGNY</td>
+            <td>REPENTIGNY 2</td>
+        </tr>
+        <tr>
+            <td>Dimanche le 29 janvier</td>
+            <td>18:30</td>
+            <td>Match Officiel</td>
+            <td>GOUVERNEURS TERREBONNE</td>
+            <td>MOUSQUETAIRES LACHENAIE</td>
+            <td>LACHENAIE 2</td>
+        </tr>
+        <tr>
+            <td>Samedi le 04 février</td>
+            <td>18:00</td>
+            <td>Match Officiel</td>
+            <td>BLUES REPENTIGNY</td>
+            <td>GOUVERNEURS TERREBONNE</td>
+            <td>TERREBONNE 2</td>
+        </tr>
+        <tr>
+            <td>Dimanche le 12 février</td>
+            <td>15:00</td>
+            <td>Match Officiel</td>
+            <td>GOUVERNEURS TERREBONNE</td>
+            <td>BLUES REPENTIGNY</td>
+            <td>REPENTIGNY 1</td>
+        </tr>
+        <tr>
+            <td>Dimanche le 19 février</td>
+            <td>16:30</td>
+            <td>Match Officiel</td>
+            <td>BULLDOGS REPENTIGNY</td>
+            <td>GOUVERNEURS TERREBONNE</td>
+            <td>TERREBONNE 1</td>
+        </tr>
     </tbody>
 
 </table>
+
+
 
 
 
