Corrected the stats parsing/clensing

--- a/stats.html
+++ b/stats.html
@@ -1,1 +1,319 @@
-undefined
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width">
+  <title></title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/css/style.css">
+</head>
+<body>
+
+
+  <table class="table table-striped table-hover">
+    <thead>
+        <tr>
+            <th>#</th>
+            <th>Equipe</th>
+            <th>PJ</th>
+            <th>V</th>
+            <th>D</th>
+            <th>N</th>
+            <th>BP</th>
+            <th>BC</th>
+            <th>Diff</th>
+            <th>%%</th>
+            <th>FJ</th>
+            <th>Pts</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>1</td>
+            <td>AIGLES BERTHIER</td>
+            <td>8</td>
+            <td>6</td>
+            <td>2</td>
+            <td>0</td>
+            <td>27</td>
+            <td>12</td>
+            <td>15</td>
+            <td>0.833</td>
+            <td>8</td>
+            <td>20</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>CYCLONES 1 JOLIETTE-CRABTREE</td>
+            <td>7</td>
+            <td>6</td>
+            <td>1</td>
+            <td>0</td>
+            <td>37</td>
+            <td>14</td>
+            <td>23</td>
+            <td>0.905</td>
+            <td>7</td>
+            <td>19</td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>COBRAS LA PLAINE</td>
+            <td>7</td>
+            <td>5</td>
+            <td>1</td>
+            <td>1</td>
+            <td>20</td>
+            <td>8</td>
+            <td>12</td>
+            <td>0.857</td>
+            <td>7</td>
+            <td>18</td>
+        </tr>
+        <tr>
+            <td>4</td>
+            <td>SIEURS TERREBONNE</td>
+            <td>7</td>
+            <td>4</td>
+            <td>3</td>
+            <td>0</td>
+            <td>17</td>
+            <td>24</td>
+            <td>-7</td>
+            <td>0.714</td>
+            <td>7</td>
+            <td>15</td>
+        </tr>
+        <tr>
+            <td>5</td>
+            <td>AIGLES SADP</td>
+            <td>8</td>
+            <td>3</td>
+            <td>4</td>
+            <td>1</td>
+            <td>24</td>
+            <td>26</td>
+            <td>-2</td>
+            <td>0.625</td>
+            <td>8</td>
+            <td>15</td>
+        </tr>
+        <tr>
+            <td>6</td>
+            <td>CYCLONES 2 JOLIETTE-CRABTREE</td>
+            <td>6</td>
+            <td>4</td>
+            <td>2</td>
+            <td>0</td>
+            <td>24</td>
+            <td>8</td>
+            <td>16</td>
+            <td>0.778</td>
+            <td>6</td>
+            <td>14</td>
+        </tr>
+        <tr>
+            <td>7</td>
+            <td>CHEVALIERS LACHENAIE</td>
+            <td>6</td>
+            <td>4</td>
+            <td>2</td>
+            <td>0</td>
+            <td>16</td>
+            <td>6</td>
+            <td>10</td>
+            <td>0.778</td>
+            <td>6</td>
+            <td>14</td>
+        </tr>
+        <tr>
+            <td>8</td>
+            <td>CYCLONES 3 JOLIETTE-CRABTREE</td>
+            <td>6</td>
+            <td>4</td>
+            <td>2</td>
+            <td>0</td>
+            <td>21</td>
+            <td>13</td>
+            <td>8</td>
+            <td>0.778</td>
+            <td>6</td>
+            <td>14</td>
+        </tr>
+        <tr>
+            <td>9</td>
+            <td>MOUSQUETAIRES LACHENAIE</td>
+            <td>6</td>
+            <td>3</td>
+            <td>1</td>
+            <td>2</td>
+            <td>13</td>
+            <td>9</td>
+            <td>4</td>
+            <td>0.778</td>
+            <td>6</td>
+            <td>14</td>
+        </tr>
+        <tr>
+            <td>10</td>
+            <td>BULLDOGS REPENTIGNY</td>
+            <td>6</td>
+            <td>3</td>
+            <td>2</td>
+            <td>1</td>
+            <td>11</td>
+            <td>9</td>
+            <td>2</td>
+            <td>0.722</td>
+            <td>6</td>
+            <td>13</td>
+        </tr>
+        <tr>
+            <td>11</td>
+            <td>FAUCONS SADP</td>
+            <td>6</td>
+            <td>3</td>
+            <td>3</td>
+            <td>0</td>
+            <td>10</td>
+            <td>11</td>
+            <td>-1</td>
+            <td>0.667</td>
+            <td>6</td>
+            <td>12</td>
+        </tr>
+        <tr>
+            <td>12</td>
+            <td>AMBASSADEURS 2 CLL</td>
+            <td>6</td>
+            <td>3</td>
+            <td>3</td>
+            <td>0</td>
+            <td>10</td>
+            <td>13</td>
+            <td>-3</td>
+            <td>0.667</td>
+            <td>6</td>
+            <td>12</td>
+        </tr>
+        <tr>
+            <td>13</td>
+            <td>AMBASSADEURS  1 CLL</td>
+            <td>5</td>
+            <td>3</td>
+            <td>2</td>
+            <td>0</td>
+            <td>10</td>
+            <td>8</td>
+            <td>2</td>
+            <td>0.733</td>
+            <td>5</td>
+            <td>11</td>
+        </tr>
+        <tr>
+            <td>14</td>
+            <td>VOYAGEURS MASCOUCHE</td>
+            <td>8</td>
+            <td>1</td>
+            <td>6</td>
+            <td>1</td>
+            <td>9</td>
+            <td>26</td>
+            <td>-17</td>
+            <td>0.458</td>
+            <td>8</td>
+            <td>11</td>
+        </tr>
+        <tr>
+            <td>15</td>
+            <td>GOUVERNEURS TERREBONNE</td>
+            <td>6</td>
+            <td>2</td>
+            <td>4</td>
+            <td>0</td>
+            <td>9</td>
+            <td>16</td>
+            <td>-7</td>
+            <td>0.556</td>
+            <td>6</td>
+            <td>10</td>
+        </tr>
+        <tr>
+            <td>16</td>
+            <td>GAULOIS ST-LIN-LAURENTIDES</td>
+            <td>6</td>
+            <td>1</td>
+            <td>5</td>
+            <td>0</td>
+            <td>4</td>
+            <td>26</td>
+            <td>-22</td>
+            <td>0.444</td>
+            <td>6</td>
+            <td>8</td>
+        </tr>
+        <tr>
+            <td>17</td>
+            <td>BLUES REPENTIGNY</td>
+            <td>3</td>
+            <td>1</td>
+            <td>1</td>
+            <td>1</td>
+            <td>7</td>
+            <td>4</td>
+            <td>3</td>
+            <td>0.667</td>
+            <td>3</td>
+            <td>6</td>
+        </tr>
+        <tr>
+            <td>18</td>
+            <td>ARCHERS ST-GABRIEL</td>
+            <td>4</td>
+            <td>1</td>
+            <td>3</td>
+            <td>0</td>
+            <td>11</td>
+            <td>15</td>
+            <td>-4</td>
+            <td>0.500</td>
+            <td>4</td>
+            <td>6</td>
+        </tr>
+        <tr>
+            <td>19</td>
+            <td>VOLTIGEURS MASCOUCHE</td>
+            <td>5</td>
+            <td>0</td>
+            <td>4</td>
+            <td>1</td>
+            <td>7</td>
+            <td>20</td>
+            <td>-13</td>
+            <td>0.400</td>
+            <td>5</td>
+            <td>6</td>
+        </tr>
+        <tr>
+            <td>20</td>
+            <td>BLUE JACKETS REPENTIGNY</td>
+            <td>6</td>
+            <td>0</td>
+            <td>6</td>
+            <td>0</td>
+            <td>6</td>
+            <td>25</td>
+            <td>-19</td>
+            <td>0.333</td>
+            <td>6</td>
+            <td>6</td>
+        </tr>
+    </tbody>
+
+</table>
+
+
+
+
+  </body>
+</html>
