Fixes calendar template

--- a/schedule.html
+++ b/schedule.html
@@ -13,6 +13,7 @@
   <table class="table table-striped table-hover">
     <thead>
         <tr>
+            <th>realDate</th>
             <th>Date</th>
             <th>Heure</th>
             <th>Type</th>
@@ -23,6 +24,7 @@
     </thead>
     <tbody>
         <tr>
+            <td>2016-09-09</td>
             <td>Vendredi le 09 septembre</td>
             <td>19:30</td>
             <td>Match HC</td>
@@ -31,6 +33,7 @@
             <td>STE-THERESE</td>
         </tr>
         <tr>
+            <td>2016-09-10</td>
             <td>Samedi le 10 septembre</td>
             <td>16:00</td>
             <td>Match HC</td>
@@ -39,6 +42,7 @@
             <td>LA PLAINE 1</td>
         </tr>
         <tr>
+            <td>2016-09-12</td>
             <td>Lundi le 12 septembre</td>
             <td>20:00</td>
             <td>Pratique 1/2 Glace</td>
@@ -47,6 +51,7 @@
             <td>TERREBONNE 1</td>
         </tr>
         <tr>
+            <td>2016-09-19</td>
             <td>Lundi le 19 septembre</td>
             <td>20:00</td>
             <td>Pratique 1/2 Glace</td>
@@ -55,6 +60,7 @@
             <td>TERREBONNE 1</td>
         </tr>
         <tr>
+            <td>2016-09-25</td>
             <td>Dimanche le 25 septembre</td>
             <td>18:30</td>
             <td>Match Officiel</td>
@@ -63,6 +69,7 @@
             <td>TERREBONNE 1</td>
         </tr>
         <tr>
+            <td>2016-09-28</td>
             <td>Mercredi le 28 septembre</td>
             <td>19:30</td>
             <td>Pratique 1/2 Glace</td>
@@ -71,6 +78,7 @@
             <td>TERREBONNE 1</td>
         </tr>
         <tr>
+            <td>2016-09-30</td>
             <td>Vendredi le 30 septembre</td>
             <td>20:30</td>
             <td>Match Officiel</td>
@@ -79,6 +87,7 @@
             <td>SADP</td>
         </tr>
         <tr>
+            <td>2016-10-02</td>
             <td>Dimanche le 02 octobre</td>
             <td>16:00</td>
             <td>Match Officiel</td>
@@ -87,6 +96,7 @@
             <td>TERREBONNE 1</td>
         </tr>
         <tr>
+            <td>2016-10-06</td>
             <td>Jeudi le 06 octobre</td>
             <td>18:30</td>
             <td>Pratique pleine glace</td>
@@ -95,6 +105,7 @@
             <td>TERREBONNE 1</td>
         </tr>
         <tr>
+            <td>2016-10-08</td>
             <td>Samedi le 08 octobre</td>
             <td>18:00</td>
             <td>Match Officiel</td>
@@ -103,6 +114,7 @@
             <td>TERREBONNE 2</td>
         </tr>
         <tr>
+            <td>2016-10-09</td>
             <td>Dimanche le 09 octobre</td>
             <td>16:00</td>
             <td>Match Officiel</td>
@@ -111,6 +123,7 @@
             <td>TERREBONNE 1</td>
         </tr>
         <tr>
+            <td>2016-10-16</td>
             <td>Dimanche le 16 octobre</td>
             <td>14:30</td>
             <td>Match Officiel</td>
@@ -119,6 +132,7 @@
             <td>TERREBONNE 2</td>
         </tr>
         <tr>
+            <td>2016-10-17</td>
             <td>Lundi le 17 octobre</td>
             <td>20:00</td>
             <td>Pratique 1/2 Glace</td>
@@ -127,6 +141,7 @@
             <td>TERREBONNE 1</td>
         </tr>
         <tr>
+            <td>2016-10-19</td>
             <td>Mercredi le 19 octobre</td>
             <td>20:30</td>
             <td>Pratique 1/2 Glace</td>
@@ -135,6 +150,7 @@
             <td>TERREBONNE 1</td>
         </tr>
         <tr>
+            <td>2016-10-21</td>
             <td>Vendredi le 21 octobre</td>
             <td>20:30</td>
             <td>Match Officiel</td>
@@ -143,6 +159,7 @@
             <td>TERREBONNE 2</td>
         </tr>
         <tr>
+            <td>2016-10-23</td>
             <td>Dimanche le 23 octobre</td>
             <td>15:30</td>
             <td>Match Officiel</td>
@@ -151,6 +168,7 @@
             <td>TERREBONNE 2</td>
         </tr>
         <tr>
+            <td>2016-10-26</td>
             <td>Mercredi le 26 octobre</td>
             <td>20:30</td>
             <td>Pratique 1/2 Glace</td>
@@ -159,6 +177,7 @@
             <td>TERREBONNE 1</td>
         </tr>
         <tr>
+            <td>2016-10-30</td>
             <td>Dimanche le 30 octobre</td>
             <td>14:30</td>
             <td>Match Officiel</td>
@@ -167,6 +186,7 @@
             <td>MASCOUCHE 2</td>
         </tr>
         <tr>
+            <td>2016-10-31</td>
             <td>Lundi le 31 octobre</td>
             <td>20:00</td>
             <td>Pratique 1/2 Glace</td>
@@ -175,6 +195,7 @@
             <td>TERREBONNE 1</td>
         </tr>
         <tr>
+            <td>2016-11-06</td>
             <td>Dimanche le 06 novembre</td>
             <td>13:30</td>
             <td>Match Officiel</td>
@@ -183,6 +204,7 @@
             <td>MASCOUCHE 2</td>
         </tr>
         <tr>
+            <td>2016-11-07</td>
             <td>Lundi le 07 novembre</td>
             <td>20:00</td>
             <td>Pratique 1/2 Glace</td>
@@ -191,6 +213,7 @@
             <td>TERREBONNE 1</td>
         </tr>
         <tr>
+            <td>2016-11-14</td>
             <td>Lundi le 14 novembre</td>
             <td>21:00</td>
             <td>Pratique 1/2 Glace</td>
@@ -199,6 +222,7 @@
             <td>TERREBONNE 1</td>
         </tr>
         <tr>
+            <td>2016-11-20</td>
             <td>Dimanche le 20 novembre</td>
             <td>13:30</td>
             <td>Match Officiel</td>
@@ -207,6 +231,7 @@
             <td>ARENA FAMILIPRIX ST-GABRIEL</td>
         </tr>
         <tr>
+            <td>2016-11-25</td>
             <td>Vendredi le 25 novembre</td>
             <td>20:30</td>
             <td>Pratique 1/2 Glace</td>
@@ -215,6 +240,7 @@
             <td>TERREBONNE 2</td>
         </tr>
         <tr>
+            <td>2016-11-26</td>
             <td>Samedi le 26 novembre</td>
             <td>19:00</td>
             <td>Match Officiel</td>
@@ -223,6 +249,7 @@
             <td>TERREBONNE 2</td>
         </tr>
         <tr>
+            <td>2016-11-28</td>
             <td>Lundi le 28 novembre</td>
             <td>20:00</td>
             <td>Pratique 1/2 Glace</td>
@@ -231,6 +258,7 @@
             <td>TERREBONNE 1</td>
         </tr>
         <tr>
+            <td>2016-12-04</td>
             <td>Dimanche le 04 décembre</td>
             <td>15:00</td>
             <td>Match Officiel</td>
@@ -239,6 +267,7 @@
             <td>REPENTIGNY 1</td>
         </tr>
         <tr>
+            <td>2016-12-10</td>
             <td>Samedi le 10 décembre</td>
             <td>18:00</td>
             <td>Match Officiel</td>
@@ -247,6 +276,7 @@
             <td>TERREBONNE 2</td>
         </tr>
         <tr>
+            <td>2016-12-11</td>
             <td>Dimanche le 11 décembre</td>
             <td>17:00</td>
             <td>Match Officiel</td>
@@ -255,6 +285,7 @@
             <td>TERREBONNE 1</td>
         </tr>
         <tr>
+            <td>2016-12-17</td>
             <td>Samedi le 17 décembre</td>
             <td>17:00</td>
             <td>Match Officiel</td>
@@ -263,6 +294,7 @@
             <td>BERTHIERVILLE</td>
         </tr>
         <tr>
+            <td>2016-12-18</td>
             <td>Dimanche le 18 décembre</td>
             <td>18:30</td>
             <td>Match Officiel</td>
@@ -271,6 +303,7 @@
             <td>ASSOMPTION</td>
         </tr>
         <tr>
+            <td>2017-01-08</td>
             <td>Dimanche le 08 janvier</td>
             <td>16:30</td>
             <td>Match Officiel</td>
@@ -279,6 +312,7 @@
             <td>LEGARDEUR</td>
         </tr>
         <tr>
+            <td>2017-01-21</td>
             <td>Samedi le 21 janvier</td>
             <td>19:00</td>
             <td>Match Officiel</td>
@@ -287,6 +321,7 @@
             <td>TERREBONNE 2</td>
         </tr>
         <tr>
+            <td>2017-01-27</td>
             <td>Vendredi le 27 janvier</td>
             <td>20:45</td>
             <td>Match Officiel</td>
@@ -295,6 +330,7 @@
             <td>REPENTIGNY 2</td>
         </tr>
         <tr>
+            <td>2017-01-29</td>
             <td>Dimanche le 29 janvier</td>
             <td>18:30</td>
             <td>Match Officiel</td>
@@ -303,6 +339,7 @@
             <td>LACHENAIE 2</td>
         </tr>
         <tr>
+            <td>2017-02-04</td>
             <td>Samedi le 04 février</td>
             <td>18:00</td>
             <td>Match Officiel</td>
@@ -311,6 +348,7 @@
             <td>TERREBONNE 2</td>
         </tr>
         <tr>
+            <td>2017-02-12</td>
             <td>Dimanche le 12 février</td>
             <td>15:00</td>
             <td>Match Officiel</td>
@@ -319,6 +357,7 @@
             <td>REPENTIGNY 1</td>
         </tr>
         <tr>
+            <td>2017-02-19</td>
             <td>Dimanche le 19 février</td>
             <td>16:30</td>
             <td>Match Officiel</td>
